<resources>
    <string name="app_name">Deudores</string>
    <string name="title_list">Lista</string>
    <string name="title_create">Crear</string>
    <string name="title_read">Leer</string>
    <string name="title_update">Actualizar</string>
    <string name="title_delete">Eliminar</string>
    <string name="name_hint">Digite el nombre</string>
    <string name="phone_hint">Digite el número</string>
    <string name="amount_hint">Digite el valor</string>
    <string name="create">CREAR</string>
    <string name="name_example">Carlos Mario Lopez</string>
    <string name="amount_example">120000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_detail">Detalle</string>
    <string name="buscar_hint">Buscar</string>
    <string name="phonre_example">3104110460</string>
    <string name="phone_value">Teléfono: %s</string>
    <string name="amount_value">Valor de la deuda: %s</string>
    <string name="accept">Aceptar</string>
    <string name="negative">Cancelar</string>
    <string name="login_title">Iniciar sesión</string>
    <string name="register_title">Regístrate!</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="repeat_password_hint">Repetir contraseña</string >
    <string name="register_button_hint">Registrarse</string>
    <string name="spaces3">No debe haber espacios</string>
    <string name="password_digits">La contraseña debe tener 6 o más digitos</string>
    <string name="password_error">Las contraseñas deben ser iguales</string>
    <string name="missing_parameters">Ingresar parámetros faltantes</string>
    <string name="foto">foto spash</string>
    <string name="email">Correo electrónico</string>
    <string name="signin">Iniciar sesión</string>
    <string name="requiredfield">Campo requerido</string>
    <string name="cuenta">cuenta</string>
    <string name="register_text_link1">registro</string>
    <string name="register">Registrate aquí</string>
    <string name="logologin">img_login</string>
    <string name="logout">Cerrar sesión</string>
</resources>